<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Mermix</string>
	<string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>
	<string name="enter_address">Enter address...</string>
	<string name="locate">Locate</string>
	<string name="search">Search</string>
	<string name="sort">Sort</string>

	<string-array name="arr_sort">
		<item>Default</item>
		<item>Listing Date (Most Recent)</item>
		<!--<item>Lowest Price first</item>-->
		<!--<item>Highest Price first</item>-->
		<!--<item>Earliest Inspection</item>-->
	</string-array>

	<string name="sort_list_by">Sort Listing by</string>
	<string name="buy">Buy</string>
	<string name="rent">Rent</string>
	<string name="price_range">Price Range</string>
	<string name="property_type">Property Type</string>
	<string name="bedrooms">Bedrooms</string>
	<string name="bathrooms">Bathrooms</string>
	<string name="parking_spaces">Parking spaces</string>
	<string name="min_land">Minimum land size</string>
	<string name="surroun_sberb">Surrounding suberbs</string>
	<string name="furnished">Furnished only</string>
	<string name="pets_allow">Petsprogress_dialog_title allowed</string>
	<string name="smoke_permit">Smoke Permitted</string>
	<string name="rante_range">Ranting Range</string>
	<string name="search_now">Search Now</string>
	<string name="desc">Description</string>
	<string name="temp_txt">Mermix is "property consisting of land and the buildings on it, along with its natural resources such as crops, minerals, or water; immovable property of this nature; an interest vested in this; (also) an item of real property; (more generally) buildings or housing in general. Also: the business of real estate; the profession of buying, selling, or renting land, buildings or housing."</string>
	<string name="inspections">Inspections/Auctions</string>
	<string name="search_area">Search in location</string>

	<string name="location">Location</string>
	<string name="machine_type">Machine type</string>
	<string name="cultivation">Cultivation</string>
	<string name="contract_type">Contract type</string>
	<string name="no_results">No Results</string>
	<string name="progress_dialog_title"></string>
	<string name="progress_dialog_search_msg">Loading ....</string>
	<string name="progress_dialog_search_map_msg">Searching ....</string>
	<string name="progress_dialog_upload_msg">Uploading Equipment</string>
	<string name="progress_dialog_retrieve_msg">Retrieving ....</string>
	<string name="enable_location_detect_service">Please enable your device\'s location service to get near by equipments.</string>
	<string name="rest_api_connection_error">Unable to connect to mermix data servers</string>
	<string name="enable">Enable</string>
	<string name="cancel">Cancel</string>
	<string name="later">Later</string>
	<string name="submit">Submit</string>
	<string name="save">Save</string>
	<string name="equipment">Equipment</string>
	<string name="map">Map</string>
	<string name="add_new_equipment">Add</string>
	<string name="openCamera">Camera</string>
	<string name="selectImageFile">Select Image</string>
	<string name="enter_text">Enter Text</string>
	<string name="text">Text</string>
	<string name="title">Title</string>
	<string name="enter_title">Enter Title</string>
	<string name="image">Image</string>
	<string name="address">Address</string>
	<string name="enter_location">Enter location</string>
	<string name="type_to_search">type to search</string>
	<string name="selectItems">Select items ...</string>
	<string name="complete_obligatory_field">Complete</string>
	<string name="all">All</string>
	<string name="select_obligatory_field">Select</string>
	<string name="username">Username</string>
	<string name="email">E-mail</string>
	<string name="password">Password</string>
	<string name="enter_email">Enter email</string>
	<string name="enter_password">Enter password</string>
	<string name="enter_username">Enter username</string>
	<string name="login">Login</string>
	<string name="register">Become a member</string>
	<string name="progress_dialog_user_login">Checking user credentials....</string>
	<string name="user_login_failed">User credentials check failed.</string>
	<string name="upload_failed">Equipment upload failed.</string>
	<string name="price_lbl">Price(€)</string>
	<string name="price_unit">Price Unit</string>
	<string name="enter_price">Enter price</string>
	<string name="no_text">no text available</string>
	<string name="load_more">Load more</string>
	<string name="no_data">No data to display</string>
	<string name="firstname">First Name</string>
	<string name="lastname">Last Name</string>
	<string name="Renter">Renter</string>
	<string name="Owner">Owner</string>
	<string name="Professional">Professional</string>
	<string name="enter_firstname">Enter firstname</string>
	<string name="enter_lastname">Enter lastname</string>
	<string name="enter_phone">Enter phone</string>
	<string name="owner_desc">Machinery owner</string>
	<string name="renter_desc">Renter</string>
	<string name="professional_desc">Machinery renter and owner</string>
	<string name="invalid_phone_msg">Please enter valid phone number</string>
	<string name="select_role_error">Please select at least a role</string>
	<string name="contact_agent">Book it</string>
	<string name="enter_phone_long">Please provide your telephone number and mermix team will contact you.</string>
	<string name="home">Home</string>
	<string name="find_in_area">Find machinery in your area</string>
	<string name="submit_machine">Submit</string>

</resources>