<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:gravity="center_horizontal"
			  android:orientation="vertical"
			  android:background="@color/mermix_bg_color">
	<ScrollView
		android:id="@+id/scrollView1"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1" >
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical" >

			<LinearLayout
				android:id="@+id/firstname_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="@dimen/pad_10dp" >
				<TextView
					android:id="@+id/firstname_lbl"
					style="@style/lbl_spinner"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/firstname"/>
				<EditText
					android:id="@+id/firstname"
					style="android:Widget.Holo.Light.TextView.EditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/enter_firstname"
					android:inputType="textPersonName" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/lastname_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="@dimen/pad_10dp" >
				<TextView
					android:id="@+id/lastname_lbl"
					style="@style/lbl_spinner"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/lastname"/>
				<EditText
					android:id="@+id/lastname"
					style="android:Widget.Holo.Light.TextView.EditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/enter_lastname"
					android:inputType="textPersonName" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/email_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="@dimen/pad_10dp" >
				<TextView
					android:id="@+id/email_lbl"
					style="@style/lbl_spinner"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/email"/>
				<EditText
					android:id="@+id/email"
					style="android:Widget.Holo.Light.TextView.EditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/enter_email"
					android:inputType="textEmailAddress" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/username_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="@dimen/pad_10dp" >
				<TextView
					android:id="@+id/username_lbl"
					style="@style/lbl_spinner"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/username"/>
				<EditText
					android:id="@+id/username"
					style="android:Widget.Holo.Light.TextView.EditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/enter_username"
					android:inputType="textPersonName" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/password_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="@dimen/pad_10dp" >
				<TextView
					android:id="@+id/password_lbl"
					style="@style/lbl_spinner"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/password"/>
				<EditText
					android:id="@+id/password"
					style="android:Widget.Holo.Light.TextView.EditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/enter_password"
					android:inputType="textPassword" />
			</LinearLayout>
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<CheckBox android:id="@+id/role_owner"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/owner_desc"/>
				<CheckBox android:id="@+id/role_professional"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/professional_desc"/>
				<CheckBox android:id="@+id/role_renter"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/renter_desc"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/login_btn_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="center_horizontal"
				android:padding="@dimen/pad_10dp" >
				<Button
					android:id="@+id/btnRegister"
					style="@style/gray_btn"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/register" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>