<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:gravity="center_horizontal"
			  android:orientation="vertical"
			  android:background="@color/mermix_bg_color">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical" >
			<LinearLayout
				android:id="@+id/register_btn_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="right">
				<Button
					android:id="@+id/btnRegister"
					style="@style/gray_btn_small"
					android:layout_width="120dp"
					android:layout_height="wrap_content"
					android:text="@string/register" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/username_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="@dimen/pad_10dp" >
				<TextView
					android:id="@+id/username_lbl"
					style="@style/lbl_spinner"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/username"/>
				<EditText
					android:id="@+id/username"
					style="android:Widget.Holo.Light.TextView.EditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/enter_username"
					android:inputType="textPersonName" />
			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="@dimen/divider"
				android:background="@color/gray_light" />

			<LinearLayout
				android:id="@+id/password_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="@dimen/pad_10dp" >
				<TextView
					android:id="@+id/password_lbl"
					style="@style/lbl_spinner"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/password"/>
				<EditText
					android:id="@+id/password"
					style="android:Widget.Holo.Light.TextView.EditText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/enter_password"
					android:inputType="textPassword" />
			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="@dimen/divider"
				android:background="@color/gray_light" />
			<LinearLayout
				android:id="@+id/login_btn_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="center_horizontal"
				android:padding="@dimen/pad_10dp" >
				<Button
					android:id="@+id/btnLogin"
					style="@style/gray_btn"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/login" />
			</LinearLayout>
		</LinearLayout>
</LinearLayout>