<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dialogTitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:gravity="center"
            android:background="@color/mermix_red"
            android:padding="@dimen/pad_20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_25sp"
            android:text="@string/contact_agent"/>
    </LinearLayout>
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="@dimen/txt_18sp"
        android:text="@string/enter_phone"/>
    <TextView
        android:id="@+id/dialogLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:paddingTop="@dimen/pad_10dp"
        android:textSize="@dimen/txt_12sp"
        android:text="@string/enter_phone_long"/>
    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"/>
</LinearLayout>